--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# linmath.h -- A small library for linear math as required for computer graphics
+# fork of linmath.h -- A small library for linear math as required for computer graphics
 
 linmath.h provides the most used types required programming computer graphice:
 
@@ -10,3 +10,4 @@ quat -- quaternion
 The types are deliberately named like the types in GLSL. In fact they are meant to
 be used for the client side computations and passing to same typed GLSL uniforms.
 
+Added double types.
